CREATE TABLE "Customers" ( -- Table to hold customer info for online orders
  "customer_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, -- Create unique internal identifier for each customer entry
  "name" text NOT NULL, -- Customer name
  "email" text UNIQUE, -- Optional customer email
  "phone_number" text UNIQUE -- Optional customer phone number
);

CREATE TABLE "Order_Status" ( -- Table to hold order status for orders
  "status_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, -- Create unique internal identifier for each order entry
  "status_name" varchar(20) NOT NULL UNIQUE -- Order status for each order entry ("pending", "in-progress", "almost-ready", "completed", "canceled")
);

CREATE TABLE "Guest_Tables" ( -- Table to hold in-restaurant tables info
  "table_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, -- Create unique internal identifier for each table entry
  "capacity" int NOT NULL, -- Table entry's maximum capacity
  "table_status" text NOT NULL -- Table status ("available", "occupied", "reserved")
);

CREATE TABLE "Orders" ( -- Table to hold orders
  "order_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, -- Create unique identifier for each order entry
  "order_date" date NOT NULL, -- Date the order was entered
  "customer_id" int, -- Foreign key linking back to Customers.customer_id | Used for online reservations/orders
  "status_id" int NOT NULL, -- Foreign key linking back to Order_Status.status_id
  "order_type" varchar(20) NOT NULL, -- Method of ordering ("online", "in-house")
  "table_id" int -- Foreign key linking back to Guest_Tables.table_id | Used for in-house orders
);

CREATE TABLE "Menu_Items" ( -- Menu_Items
  "item_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, -- Create unique internal identifier for each menu item
  "name" text NOT NULL UNIQUE, -- Items name
  "price" decimal(5,2) NOT NULL, -- Items price
  "category_id" int
);

CREATE TABLE "Payments" ( -- Create a table named Payments
  "payment_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, -- Create a unique internal identifier for each payment processed
  "amount" decimal(6,2) NOT NULL, -- Bill total
  "payment_date" date NOT NULL, -- Date payment was processed
  "payment_method" text NOT NULL, -- How the bill was paid ("cash", "credit", "debit", "dish-washing")
  "order_id" int UNIQUE NOT NULL -- Foreign key linking back to Orders.order_id
);

CREATE TABLE "Reservations" ( -- Table to hold reservations
  "reservation_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, -- Create unique internal identifier for each reservation
  "reservation_time" timestamp NOT NULL, -- reservation time and date
  "party_size" int NOT NULL, -- How many people in the reservation
  "customer_id" int NOT NULL, -- Foreign key linking back to Customers.customer_id
  "table_id" int NOT NULL, -- Foreign key linking back to Guest_Tables.table_id
  "reservation_status_id" int NOT NULL -- Foreign key linking back to Reservations_Status.status_name
);

CREATE TABLE "Order_Items" ( -- Table to hold customer's order
  "order_id" int NOT NULL, -- Foreign key linking back to Orders.order_id
  "item_id" int NOT NULL, -- Foreign key linking back to Menu_Items.item_id
  "quantity" int NOT NULL, -- Amount of item ordered (item_id)
  PRIMARY KEY ("order_id", "item_id") -- Set order_id and item_id as a composite primary key
);

CREATE TABLE "Menu_Categories" ( -- Table for menu categories such as drinks, desserts, appetizers, and main dishes
  "category_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, -- Create unique internal identifier for each menu category
  "category_name" text NOT NULL UNIQUE -- Menu category name such as drinks, desserts, appetizers, or main dishes
);

CREATE TABLE "Reservation_Status" ( -- Table for reservation status such as booked, seated, canceled, or no-show
  "reservation_status_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, -- Create unique internal identifier for each reservation status
  "status_name" text NOT NULL UNIQUE -- Reservation status such as booked, seated, canceled, or no-show
);

-- Linking Foreign Keys:
-------------------------

-- Orders
ALTER TABLE "Orders" ADD FOREIGN KEY ("customer_id") REFERENCES "Customers" ("customer_id") DEFERRABLE INITIALLY IMMEDIATE; -- Links Orders "customer_id" to Customers "customer_id"

ALTER TABLE "Orders" ADD FOREIGN KEY ("status_id") REFERENCES "Order_Status" ("status_id") DEFERRABLE INITIALLY IMMEDIATE; -- Links Orders "status_id" to Order_Status  "status_id"

ALTER TABLE "Orders" ADD FOREIGN KEY ("table_id") REFERENCES "Guest_Tables" ("table_id") DEFERRABLE INITIALLY IMMEDIATE; -- Links Orders "table_id" to Guest_Tables "table_id"

-- Payments
ALTER TABLE "Payments" ADD FOREIGN KEY ("order_id") REFERENCES "Orders" ("order_id") DEFERRABLE INITIALLY IMMEDIATE; -- Links Payments "order_id" to Orders "order_id"

-- Reservations
ALTER TABLE "Reservations" ADD FOREIGN KEY ("customer_id") REFERENCES "Customers" ("customer_id") DEFERRABLE INITIALLY IMMEDIATE; -- Links Reservations "customer_id" to Customers "customer_id"

ALTER TABLE "Reservations" ADD FOREIGN KEY ("table_id") REFERENCES "Guest_Tables" ("table_id") DEFERRABLE INITIALLY IMMEDIATE; -- Links Reservations "table_id" to Guest_Tables "table_id"

-- Order_Items
ALTER TABLE "Order_Items" ADD FOREIGN KEY ("order_id") REFERENCES "Orders" ("order_id") DEFERRABLE INITIALLY IMMEDIATE; -- Links Order_Items "order_id" to Orders "order_id"

ALTER TABLE "Order_Items" ADD FOREIGN KEY ("item_id") REFERENCES "Menu_Items" ("item_id") DEFERRABLE INITIALLY IMMEDIATE; -- Links Order_Items "item_id" to Menu_Items "item_id"

ALTER TABLE "Menu_Items" ADD FOREIGN KEY ("category_id") REFERENCES "Menu_Categories" ("category_id") DEFERRABLE INITIALLY IMMEDIATE; -- Links Menu_Items "category_id" to Menu_Categories "category_id"

ALTER TABLE "Reservations" ADD FOREIGN KEY ("reservation_status_id") REFERENCES "Reservation_Status" ("reservation_status_id") DEFERRABLE INITIALLY IMMEDIATE; -- Links Reservations "reservation_status_id" to Reservation_Status "reservation_status_id"

-- Constraints:
----------------

-- Customers
ALTER TABLE "Customers" ADD CONSTRAINT "customer_info_required" CHECK ("email" IS NOT NULL OR "phone_number" IS NOT NULL); -- Require either email or phone_number in Customers table

-- Guest_Tables
ALTER TABLE "Guest_Tables" ADD CONSTRAINT "positive_capacity_required" CHECK ("capacity" > 0); -- Ensure guest tables have a positive capacity in Guest_Tables

ALTER TABLE "Guest_Tables" ADD CONSTRAINT "verify_table_status" CHECK ("table_status" IN ('available', 'occupied', 'reserved')); -- Ensures table_status is only one of the valid states

-- Orders
ALTER TABLE "Orders" ADD CONSTRAINT "customer_id_or_table_id_required" CHECK ("customer_id" IS NOT NULL OR "table_id" IS NOT NULL); -- Require either customer_id or table_id

-- Menu_Items
ALTER TABLE "Menu_Items" ADD CONSTRAINT "positive_price_required" CHECK ("price" > 0); -- Ensure positive price for menu items in Menu_Items table

-- Payments
ALTER TABLE "Payments" ADD CONSTRAINT "positive_amount_required"  CHECK ("amount" > 0); -- Ensure positive amount paid/to pay in Payments table 

-- Reservations
ALTER TABLE "Reservations" ADD CONSTRAINT "positive_party_size_required" CHECK ("party_size" > 0); -- Ensure positive party size in Reservations table

-- Order_Items
ALTER TABLE "Order_Items" ADD CONSTRAINT "positive_quantity_required" CHECK ("quantity" > 0); -- Ensure positive quantity of item ordered in Order_Items table

ALTER TABLE "Menu_Categories" ADD CONSTRAINT "category_name_not_empty" CHECK (trim("category_name") <> ''); -- Ensure menu category name is not empty

ALTER TABLE "Reservation_Status" ADD CONSTRAINT "reservation_status_name_not_empty" CHECK (trim("status_name") <> ''); -- Ensure reservation status name is not empty

-- Indexes:
------------

CREATE INDEX "idx_orders_customer_id" ON "Orders" ("customer_id"); -- Index on Orders.customer_id for faster JOINs with Customers

CREATE INDEX "idx_orders_status_id" ON "Orders" ("status_id"); -- Index on Orders.status_id for faster JOINs with Order_Status

CREATE INDEX "idx_orders_table_id" ON "Orders" ("table_id"); -- Index on Orders.table_id for faster JOINs with Guest_Tables

CREATE INDEX "idx_reservations_customer_id" ON "Reservations" ("customer_id"); -- Index on Reservations.customer_id for faster JOINs with Customers

CREATE INDEX "idx_reservations_table_id" ON "Reservations" ("table_id"); -- Index on Reservations.table_id for faster JOINs with Guest_Tables

CREATE INDEX "idx_order_items_item_id" ON "Order_Items" ("item_id"); -- Index on Order_Items.item_id for faster JOINs with Menu_Items

CREATE INDEX "idx_menu_items_category_id" ON "Menu_Items" ("category_id"); -- Index on Menu_Items.category_id for faster JOINs with Menu_Categories

CREATE INDEX "idx_reservations_status_id" ON "Reservations" ("reservation_status_id"); -- Index on Reservations.reservation_status_id for faster JOINs with Reservation_Status