Table "Customers" {
  "customer_id" INT [pk, increment]
  "name" text [not null]
  "email" text [unique]
  "phone_number" text [unique]

  Checks {
    `"email" IS NOT NULL OR "phone_number" IS NOT NULL` [name: 'customer_info_required']
  }
}

Table "Order_Status" {
  "status_id" INT [pk, increment]
  "status_name" varchar(20) [unique, not null]
}

Table "Guest_Tables" {
  "table_id" INT [pk, increment]
  "capacity" int [not null]
  "table_status" text [not null]

  Checks {
    `"capacity" > 0` [name: 'positive_capacity_required']
    `"table_status" IN ('available', 'occupied', 'reserved')` [name: 'verify_table_status']
  }
}

Table "Orders" {
  "order_id" INT [pk, increment]
  "order_date" date [not null]
  "customer_id" int
  "status_id" int [not null]
  "order_type" varchar(20) [not null]
  "table_id" int

  Checks {
    `"customer_id" IS NOT NULL OR "table_id" IS NOT NULL` [name: 'customer_id_or_table_id_required']
  }

  Indexes {
    customer_id [name: "idx_orders_customer_id"]
    status_id [name: "idx_orders_status_id"]
    table_id [name: "idx_orders_table_id"]
  }
}

Table "Menu_Items" {
  "item_id" INT [pk, increment]
  "name" text [unique, not null]
  "price" decimal(5,2) [not null]
  "category_id" int

  Checks {
    `"price" > 0` [name: 'positive_price_required']
  }

  Indexes {
    category_id [name: "idx_menu_items_category_id"]
  }
}

Table "Payments" {
  "payment_id" INT [pk, increment]
  "amount" decimal(6,2) [not null]
  "payment_date" date [not null]
  "payment_method" text [not null]
  "order_id" int [unique, not null]

  Checks {
    `"amount" > 0` [name: 'positive_amount_required']
  }
}

Table "Reservations" {
  "reservation_id" INT [pk, increment]
  "reservation_time" timestamp [not null]
  "party_size" int [not null]
  "customer_id" int [not null]
  "table_id" int [not null]
  "reservation_status_id" int [not null]

  Checks {
    `"party_size" > 0` [name: 'positive_party_size_required']
  }

  Indexes {
    customer_id [name: "idx_reservations_customer_id"]
    table_id [name: "idx_reservations_table_id"]
    reservation_status_id [name: "idx_reservations_status_id"]
  }
}

Table "Order_Items" {
  "order_id" int [not null]
  "item_id" int [not null]
  "quantity" int [not null]

  Checks {
    `"quantity" > 0` [name: 'positive_quantity_required']
  }

  Indexes {
    (order_id, item_id) [pk]
    item_id [name: "idx_order_items_item_id"]
  }
}

Table "Menu_Categories" {
  "category_id" INT [pk, increment]
  "category_name" text [unique, not null]

  Checks {
    `trim("category_name") <> ''` [name: 'category_name_not_empty']
  }
}

Table "Reservation_Status" {
  "reservation_status_id" INT [pk, increment]
  "status_name" text [unique, not null]

  Checks {
    `trim("status_name") <> ''` [name: 'reservation_status_name_not_empty']
  }
}

Ref:"Customers"."customer_id" < "Orders"."customer_id"

Ref:"Order_Status"."status_id" < "Orders"."status_id"

Ref:"Guest_Tables"."table_id" < "Orders"."table_id"

Ref:"Orders"."order_id" < "Payments"."order_id"

Ref:"Customers"."customer_id" < "Reservations"."customer_id"

Ref:"Guest_Tables"."table_id" < "Reservations"."table_id"

Ref:"Orders"."order_id" < "Order_Items"."order_id"

Ref:"Menu_Items"."item_id" < "Order_Items"."item_id"

Ref:"Menu_Categories"."category_id" < "Menu_Items"."category_id"

Ref:"Reservation_Status"."reservation_status_id" < "Reservations"."reservation_status_id"
